fix dark mode bug

--- a/finalProject/projects.css
+++ b/finalProject/projects.css
@@ -8,6 +8,7 @@
     border-bottom: 1px solid #e0e0e0;
 }
 .accordion-header {
+    background-color: white;
     padding: 16px;
     font-size: 18px;
     cursor: pointer;
